samples/_failures_safe/1761486274_0b8ff3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0fe1739.c: In function ‘main’:
./samples/SAFE/__tmp_f0fe1739.c:157:9: error: expected declaration or statement at end of input
  157 |         }
      |         ^
./samples/SAFE/__tmp_f0fe1739.c:157:9: error: expected declaration or statement at end of input
